forgin length warning issue overlap issue fixed :

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -7110,3 +7110,9 @@ left: 17rem;
       }
     }
   }
+
+.forging-length-wrapper {
+  .text-help {
+       min-width: 160px;
+  }
+}
